<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnFive"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTwo"
        app:layout_constraintEnd_toStartOf="@+id/btnSix"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnTwo"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnZero"
        app:layout_constraintEnd_toStartOf="@+id/btnThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnEight"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFive"
        app:layout_constraintEnd_toStartOf="@+id/btnNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnZero"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSign"
        app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnSign"
        android:text="@string/u00b1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btnZero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnFour"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOne"
        app:layout_constraintEnd_toStartOf="@+id/btnFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnOne"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSign"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnSeven"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFour"
        app:layout_constraintEnd_toStartOf="@+id/btnEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnSix"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnThree"
        app:layout_constraintEnd_toStartOf="@+id/btnDevide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnPercentage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnPercentage"
        android:text="@string/percentage"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMinus"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDevide"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnDevide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:onClick="btnDivide"
        android:text="@string/u00f7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btnPercentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnSquareRoot" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnThree"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnMultiply"
        android:text="@string/u00d7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnDevide" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnMinus"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMultiply"
        app:layout_constraintTop_toBottomOf="@+id/btnPercentage" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnNine"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSix"
        app:layout_constraintEnd_toStartOf="@+id/btnSquareRoot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnSquareRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnSquareRoot"
        android:text="@string/sqrt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDevide"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnCancel"
        android:text="@string/c"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPercentage"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSquareRoot"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnDot"
        android:text="@string/dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnPlus"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="btnEqual"
        android:text="@string/equal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:layout_editor_absoluteY="53dp" />

</android.support.constraint.ConstraintLayout>